kind-cluster/{{ cookiecutter.__project_name }}/{{ cookiecutter.namespace }}/overlays/argocd/argocd-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
