kind-cluster/{{ cookiecutter.__project_name }}/{{ cookiecutter.namespace }}/overlays/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argdocd-server-ingress
  namespace: default
  #annotations:
    # Optional: You don't need this if you use ingressClassName
    #kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: argocd-server.domain-name.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
