kind-cluster/{{ cookiecutter.__project_name }}/{{ cookiecutter.namespace }}/overlays/argocd/argocd-traefik-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.pyflowops.local`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls: {}
